--- a/simon.html
+++ b/simon.html
@@ -11,6 +11,7 @@
   </head>
   <body style="text-align: center; font-family: Montserrat;">
     <h1>Welcome To Simon Says</h1>
+    <h2>Start Your Game..</h2>
     <h3>Press Any Key To Start The Game..</h3>
     <div style="display: flex; justify-content: center;">
     <div class="container">
